@@ -153,3 +153,4 @@ issue 151: saves include full-coordinates, not chunk relative ones leading into 
     uuk
 issue 158: when trying to load an world which does not exists, the game gives two exceptions to the log; fixed on:
     31.03.2020 by uuk
+issue 160: when dragging mouse, mouse position attribute of window does not get updated; fixed on: 31.03.2020 by uuk
