@@ -22,13 +22,19 @@ class OpenedInventoryStatePart(state.StatePart.StatePart):
 
     def __init__(self):
         super().__init__()
-
         self.active = False
+        self.slot_list = []
+        self.moving_itemstack = None
+        self.mode = 0  # possible: 0 - None, 1: equal on all slots, 2: on every slot one more
+        self.original_amount = []
 
     def bind_to_eventbus(self):
         self.master[0].eventbus.subscribe("user:keyboard:press", self.on_key_press)
         self.master[0].eventbus.subscribe("render:draw:2d", self.on_draw_2d)
         self.master[0].eventbus.subscribe("user:mouse:press", self.on_mouse_press)
+        self.master[0].eventbus.subscribe("user:mouse:release", self.on_mouse_release)
+        self.master[0].eventbus.subscribe("user:mouse:drag", self.on_mouse_drag)
+        self.master[0].eventbus.subscribe("user:mouse:scroll", self.on_mouse_scroll)
 
     def on_key_press(self, symbol, modifiers):
         if symbol == key.ESCAPE:
@@ -53,7 +59,7 @@ class OpenedInventoryStatePart(state.StatePart.StatePart):
             G.inventoryhandler.moving_slot.draw(0, 0)
             G.inventoryhandler.moving_slot.draw_lable(0, 0)
 
-    def _get_slot_for(self, x, y) -> gui.Slot.Slot or None:
+    def _get_slot_for(self, x, y) -> gui.Slot.Slot:
         """
         get slot for position
         :param x: the x position
@@ -68,87 +74,111 @@ class OpenedInventoryStatePart(state.StatePart.StatePart):
                 sy += dy
                 if 0 <= x - sx <= 32 and 0 <= y - sy <= 32:
                     return slot
-        return None
-
-    def handle_left_click(self, x, y, slot, modifiers):
-        moving_slot = G.inventoryhandler.moving_slot
-        if slot and (slot.interaction_mode[0] or not slot.get_itemstack().item) and (slot.interaction_mode[1] or not
-                moving_slot.get_itemstack().item):
-            if slot.get_itemstack().get_item_name() == moving_slot.get_itemstack().get_item_name() and \
-                    slot.get_itemstack().get_item_name() is not None:
-                eamount = slot.get_itemstack().amount
-                ramount = moving_slot.get_itemstack().amount
-                mstack = slot.get_itemstack().item.STACK_SIZE
-                if eamount == mstack: return
-                possible = mstack - eamount
-                if possible > ramount:
-                    possible = ramount
-                slot.get_itemstack().add_amount(possible)
-                slot.call_update(player=True)
-                moving_slot.get_itemstack().add_amount(-possible)
-                if moving_slot.get_itemstack().amount <= 0:
-                    moving_slot.get_itemstack().clean()
-            else:
-                flag = slot.can_set_item(moving_slot.get_itemstack())
-                if flag:
-                    stack, mstack = slot.get_itemstack(), moving_slot.get_itemstack()
-                    moving_slot.set_itemstack(stack)
-                    slot.set_itemstack(mstack, player=True)
-        else:
-            # todo: threw the itemstack [see entity update for info]
-            pass
-
-    def handle_right_click(self, x, y, slot, modifiers):
-        moving_slot = G.inventoryhandler.moving_slot
-        if slot:
-            if not slot.get_itemstack().item:
-                if slot.interaction_mode[1] and slot.can_set_item(moving_slot.get_itemstack()):
-                    slot.set_itemstack(moving_slot.get_itemstack().copy().set_amount(1), player=True)
-                    moving_slot.get_itemstack().add_amount(-1)
-            elif not moving_slot.get_itemstack().item and slot.allow_half_getting:
-                if slot.interaction_mode[0]:
-                    moving_slot.set_itemstack(slot.get_itemstack().copy())
-                    slot.get_itemstack().amount //= 2
-                    moving_slot.get_itemstack().set_amount(
-                        abs(moving_slot.get_itemstack().amount - slot.get_itemstack().amount))
-                    if slot.get_itemstack().amount == 0:
-                        slot.get_itemstack().clean()
-                    if moving_slot.get_itemstack().amount == 0:
-                        moving_slot.get_itemstack().clean()
-                    slot.call_update(player=True)
-            elif not slot.get_itemstack().is_empty() and slot.get_itemstack().get_item_name() == moving_slot.get_itemstack(). \
-                    get_item_name() and slot.get_itemstack().amount < slot.get_itemstack().item.STACK_SIZE:
-                if slot.interaction_mode[1]:
-                    slot.get_itemstack().add_amount(1)
-                    moving_slot.get_itemstack().add_amount(-1)
-                    slot.call_update(player=True)
-        else:
-            # todo: threw one item [see entity update for info]
-            pass
-
-    def handle_middle_click(self, x, y, slot, modifiers):
-        moving_slot = G.inventoryhandler.moving_slot
-        if G.world.get_active_player().gamemode == 1 and slot and slot.get_itemstack().get_item_name() and not \
-                moving_slot.get_itemstack().get_item_name():
-            moving_slot.set_itemstack(slot.get_itemstack().copy())
-            moving_slot.get_itemstack().set_amount(moving_slot.get_itemstack().item.STACK_SIZE)
 
     def on_mouse_press(self, x, y, button, modifiers):
         if G.window.exclusive: return  # when no mouse interaction is active, do nothing
         slot: gui.Slot.Slot = self._get_slot_for(x, y)
-        moving_slot: gui.Slot.Slot = G.inventoryhandler.moving_slot
-        if modifiers & key.MOD_SHIFT and slot.on_shift_click:
-            try:
-                flag = slot.on_shift_click(slot, x, y, button, modifiers)
-            except:
-                logger.println("error during executing function {}".format(slot.on_shift_click))
-                raise
-            if flag is True: return
-        if button == mouse.LEFT: self.handle_left_click(x, y, slot, modifiers)
-        elif button == mouse.RIGHT: self.handle_right_click(x, y, slot, modifiers)
-        elif button == mouse.MIDDLE: self.handle_middle_click(x, y, slot, modifiers)
-        if moving_slot.get_itemstack().amount == 0:
-            moving_slot.get_itemstack().clean()
+        if slot is None: return
+        self.moving_itemstack = G.inventoryhandler.moving_slot.itemstack.copy()
+        if modifiers & key.MOD_SHIFT:
+            if slot.on_shift_click:
+                flag = slot.on_shift_click(x, y, button, modifiers, G.world.get_active_player())
+                if flag is not True: return
+        if button == mouse.LEFT:
+            if G.inventoryhandler.moving_slot.itemstack.is_empty() or (not slot.interaction_mode[1] and
+                                                                       slot.itemstack == self.moving_itemstack):
+                if not slot.interaction_mode[0]: return
+                G.inventoryhandler.moving_slot.itemstack = slot.itemstack.copy()
+                slot.itemstack.clean()
+                slot.call_update(True)
+            else:
+                self.mode = 1
+                self.on_mouse_drag(x, y, 0, 0, button, modifiers)
+        elif button == mouse.RIGHT:
+            if G.inventoryhandler.moving_slot.itemstack.is_empty() and slot.allow_half_getting:
+                if not slot.interaction_mode[0]: return
+                amount = slot.itemstack.amount
+                G.inventoryhandler.moving_slot.itemstack = slot.itemstack.copy().set_amount(amount-amount//2)
+                slot.itemstack.set_amount(amount//2)
+                slot.call_update(True)
+            else:
+                self.mode = 2
+                self.on_mouse_drag(x, y, 0, 0, button, modifiers)
+        elif button == mouse.MIDDLE:
+            if G.inventoryhandler.moving_slot.itemstack.is_empty() and G.world.get_active_player().gamemode == 1:
+                G.inventoryhandler.moving_slot.itemstack = self.moving_itemstack.copy().set_amount(
+                    slot.itemstack.item.STACK_SIZE)
+            else:
+                pass  # todo: add drag-filler
+
+    def on_mouse_release(self, x, y, button, modifiers):
+        if G.window.exclusive:  # when no mouse interaction is active, do nothing beside clearing the status
+            self.slot_list.clear()
+            self.original_amount.clear()
+            self.moving_itemstack = None
+            self.mode = 0
+            return
+        self.reorder_slot_list_stacks()
+        if self.mode == 1:
+            if len(self.slot_list) == 0:
+                pass  # todo: drop item [see entity update]
+            self.slot_list.clear()
+            self.original_amount.clear()
+            self.moving_itemstack = None
+            self.mode = 0
+        elif self.mode == 1:
+            if len(self.slot_list) == 0:
+                pass  # todo: drop item [see entity update]
+            self.slot_list.clear()
+            self.original_amount.clear()
+            self.moving_itemstack = None
+            self.mode = 0
+
+    def deactivate(self):
+        for statepart in self.parts:
+            statepart.deactivate()
+        self.on_mouse_release(0, 0, 0, 0)
+
+    def on_mouse_drag(self, x, y, dx, dy, buttons, modifers):
+        if G.window.exclusive: return  # when no mouse interaction is active, do nothing
+        slot = self._get_slot_for(x, y)
+        if slot is None: return
+        if self.mode != 0 and (slot.itemstack.item == self.moving_itemstack.item or slot.itemstack.is_empty()):
+            if not slot.can_set_item(self.moving_itemstack): return
+            if not slot.interaction_mode[1]: return
+            if slot not in self.slot_list:
+                self.slot_list.append(slot)
+                self.original_amount.append(slot.itemstack.amount)
+            self.reorder_slot_list_stacks()
+
+    def reorder_slot_list_stacks(self):
+        if len(self.slot_list) == 0: return
+        if self.mode == 1:
+            total = self.moving_itemstack.amount
+            per_element = total // len(self.slot_list)
+            overhead = total - per_element * len(self.slot_list)
+            for i, slot in enumerate(self.slot_list):
+                x = 0 if overhead == 0 else 1
+                if overhead > 0: overhead -= 1
+                if slot.itemstack.is_empty(): slot.itemstack = self.moving_itemstack.copy()
+                slot.itemstack.set_amount(self.original_amount[i]+per_element+x)
+                slot.call_update(True)
+            G.inventoryhandler.moving_slot.itemstack.clean()
+        elif self.mode == 2:
+            overhead = self.moving_itemstack.amount
+            for i, slot in enumerate(self.slot_list):
+                if overhead > 0:
+                    if slot.itemstack.is_empty(): slot.itemstack = self.moving_itemstack.copy()
+                    slot.itemstack.set_amount(self.original_amount[i]+1)
+                    overhead -= 1
+                    slot.call_update(True)
+            G.inventoryhandler.moving_slot.itemstack.set_amount(overhead)
+
+    def on_mouse_scroll(self, x, y, dx, dy):
+        if G.window.exclusive: return  # when no mouse interaction is active, do nothing
+        slot = self._get_slot_for(x, y)
+        if slot is None: return
+        # todo: add container-container scroll (-> see SHIFT-click for movement code, only move one item of stack)
 
 
 inventory_part = OpenedInventoryStatePart()
