@@ -100,3 +100,11 @@ issue 157:
 
 issue 159: [fix in world generation update]
     bug: various maps are stored not chunk-relative
+
+issue 161:
+    bug: when saving, moving slot is not saved
+    fix: like in kill-method, force-close all inventories on save
+    other fix: save moving slot also & load it
+
+issue 162:
+    bug: non-SlotCopy slots render 1 stack-size
